atualização de responsabilidade

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -30,16 +30,17 @@
     <button class="about-button">Sobre nós </button>
   </div>
   <div class="about-box">
-    <img class="sustentability-img" src="assets/svg/image-section.svg" alt="" />
+    <img class="about-img" src="assets/svg/image-section.svg" alt="" />
   </div>
 </div>
 </div>
 <!-- <div class="partners">
   <h1 class="about-tittle">Rede de Parceiros</h1>
 </div> -->
+<div class="container-g">
 <div class="container-hiring">
 
-  <h1 class="about-tittle">Trabalhe Conosco</h1>
+  <h1 class="hiring-tittle">Trabalhe Conosco</h1>
   <div class="boxes">
     <div class="white-box">
       <img src="assets/svg/Potencial.svg" alt="">
@@ -75,9 +76,11 @@
   </div>
   <button class="hiring-button">Vagas disponiveis</button>
 </div>
+</div>
+
 <div class="container-sustentability">
   <div class="topo">
-  <h1 class="about-tittle">Sustentabilidade</h1>
+  <h1 class="sustentability-tittle">Sustentabilidade</h1>
   <h1 class="sustentability-subtittle">Algumas Iniciativas:
   </h1></div>
   <div class="boxes">
