--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -1,13 +1,8 @@
-.container{
-  display: flex;
+.container-g{
+display: flex;
 flex-direction: column;
 align-items: center;
-padding: 0px;
-isolation: isolate;
-position: relative;
-width: 100%;
-height: 5027px;
-background: #FFFFFF;
+
 }
 .background-gradient {
   background-image: linear-gradient(to right, #000000cc, transparent),url("/assets/svg/Background-Image.svg");
@@ -75,6 +70,9 @@ background: #FFFFFF;
 
 .background-about{
   background: #F6F6F6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .container-about {
   display: flex;
@@ -82,7 +80,7 @@ background: #FFFFFF;
   align-items: center;
   padding: 10%;
   gap: 10px;
-  width: 1440px;
+  width: 100%;
   height: 514px;
   margin: 0!important;
 }
@@ -95,6 +93,9 @@ background: #FFFFFF;
   gap: 18px;
   width: 528px;
   height: 306px;
+}
+.about-img{
+width: 418.61px;
 }
 .about-subtittle {
   color: var(--first-black);
@@ -163,6 +164,7 @@ background: #FFFFFF;
   padding-right: 15px;
   margin-left: 5%;
   margin-top: 1%;
+  margin-right: 80%;
   &:hover {
     cursor: pointer;
     border: 1px solid #587b52;
@@ -181,6 +183,7 @@ background: #FFFFFF;
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 100%;
   padding: 16px;
   gap: 16px;
 }
@@ -198,6 +201,14 @@ background: #FFFFFF;
   border-radius: 4px;
 
 }
+.hiring-tittle {
+  color: #587b52;
+  margin: 5px;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 120%;
+  margin-right: 85%;
+ }
 .hiring-subtittle {
   color: var(--first-black);
   margin: 5px;
@@ -214,8 +225,10 @@ background: #FFFFFF;
 }
 .container-hiring{
   background: linear-gradient(90deg, rgba(246,244,244,1) 0%, rgba(213,215,213,1) 38%, rgba(237,255,234,1) 100%, rgba(0,212,255,1) 100%);
-  padding: 5%;
-  display: grid;
+  padding: 5% 5% 5% 8%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
 }
 .sustentability-box{
@@ -241,16 +254,31 @@ background: #FFFFFF;
 }
 .container-sustentability {
   background-color: #f6f6f6;
-  padding: 5%;
+  padding: 5% 5% 5% 8%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
+.topo{
+  margin-right: 90%;
+  padding-left: 5%;
+}
+.sustentability-tittle {
+  color: #587b52;
+  margin: 5px;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 120%;
+
+ }
 .sustentability-subtittle {
   color: black;
   margin: 5px;
   font-weight: 400;
   font-size: 21px;
   line-height: 120%;
+  width: 190%;
+
 }
 .container-comments{
   display: flex;
@@ -318,6 +346,7 @@ background: #FFFFFF;
     box-shadow: none;
   }
 }
+
 .comments-subtittle{
   color: var(--first-black);
   margin: 5px;
@@ -332,11 +361,18 @@ background: #FFFFFF;
     height: fit-content;
     width: 900px;
   }
+  .hiring-tittle{
+    margin-right: 25%;
+  }
 
+  .topo{
+    margin-right: 40%;
+  }
   .boxes{
     flex-direction: column;
   }
   .hiring-button{
+    margin-right: 30%;
     margin-left: 30%;
   }
 
