--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header  [ngClass]="isHome() ? 'baseline' : 'baseline-black'">
+<!-- <header  [ngClass]="isHome() ? 'baseline' : 'baseline-black'">
   <div class="baseline-content">
     <div class="baseline-logo">
       <a routerLink="/home" *ngIf="isHome(); else blacklogo" >
@@ -11,7 +11,16 @@
     </div>
 
     <div class="navbar-mobile">
-      <img class="navbar-icon" src="../../assets/svg/navbar.svg" (click)="isMenuOpen = !isMenuOpen" />
+      <div class="navbar-color" *ngIf="isHome(); else blacknavbar">
+      <img class="navbar-icon" src="../../assets/svg/navbar_white.svg"(click)="collapse.toggle()"
+      [attr.aria-expanded]="!gfg"
+      aria-controls="collapseExample" />
+      </div>
+      <ng-template #blacknavbar>
+        <img class="navbar-icon" src="../../assets/svg/navbar.svg"(click)="collapse.toggle()"
+        [attr.aria-expanded]="!gfg"
+        aria-controls="collapseExample" />
+      </ng-template>
     </div>
 
     <div class="baseline-center">
@@ -45,5 +54,66 @@
 
 
   </div>
+
+</header>
+<div #collapse="ngbCollapse"
+     [(ngbCollapse)]="gfg">
+  <div class="card">
+    <div class="card-body">
+      Angular10 ng bootstrap
+    </div>
+  </div>
+</div> -->
+
+ <header>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+    <div class="container-fluid">
+      <a class="navbar-brand" [routerLink]="['/home']">
+        <a [routerLink]="'/home'" *ngIf="isHome(); else blacklogo" >
+          <img class="header-logo" src="../../assets/svg/LOGO 2.svg" alt="Amg Logo" /></a>
+        <ng-template #blacklogo>
+          <div class="baseline-logo">
+            <a [routerLink]="'/home'"><img class="header-logo" src="../../assets/svg/LOGO 5.svg" alt="Amg Logo" /></a>
+          </div>
+        </ng-template>
+
+      </a>
+
+
+      <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
+        &#9776;
+      </button>
+
+
+      <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+
+            <a class="nav-link" [routerLink]="'/about-us'" (click)="isMenuCollapsed = true">Sobre AMG</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'/solutions'" (click)="isMenuCollapsed = true">Soluções
+              <img src="../../assets/svg/arrow_down.svg" *ngIf="isHome(); else blackarrow" />
+              <ng-template #blackarrow>
+                <img class="header-logo" src="../../assets/svg/arrow_down_black.svg" alt="Amg Logo"/>
+              </ng-template>
+
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'/hiring'" (click)="isMenuCollapsed = true">Trabalhe Conosco</a>
+          </li>
+          <li class="nav-item">
+            <div class="baseline-button">
+              <button  [routerLink]="['/contact-us']" type="button" class="btnHome">Contato</button>
+            </div>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </nav>
+
 </header>
 
