--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,6 +1,6 @@
 
 <div class="top">
-  <div class="background-gradient w-100 vh-100 d-flex">
+  <div class="background-gradient">
     <div class="container-contact">
       <div class="contact-box">
         <h1 class="contact-tittle">
