--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -16,6 +16,7 @@
     .baseline-content {
       width: 95%;
       display: flex;
+      padding: 2%;
       .icon-mobile {
         color: rgba(0, 0, 0, 0);
         width: 50px;
@@ -74,8 +75,7 @@
     align-items: center;
     align-content: center;
     justify-content: center;
-    margin-left: 35%;
-    margin-right: 30px;
+    margin-right: 45px;
   }
   .baseline-black {
     color: black;
@@ -92,6 +92,7 @@
     .baseline-content {
       width: 95%;
       display: flex;
+      padding: 2%;
       .icon-mobile {
         color: rgba(0, 0, 0, 0);
         width: 50px;
@@ -153,9 +154,15 @@
       }
     }
   }
+  .baseline-logo{
+    margin-left: 5%;
+  }
 
 
   @media screen and (max-width: 730px) {
+    .navbar-mobile{
+      margin-left: 75%;
+    }
     .navbar-icon{
       display: flex!important;
     }
@@ -165,10 +172,7 @@
     .baseline-menu{
       padding: 1%;
     }
-    .baseline-logo{
-      margin-right: 35px;
-      margin-left: 15px;
-    }
+
     .mobile-button {
       display: flex;
       width: 100%;
@@ -221,3 +225,127 @@
     }
   }
 }
+.container-header{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: inherit;
+}
+.slide-item{
+    list-style-type:none;
+    &:hover{  background-color: rgb(240, 240, 240);}
+}
+
+.navbar-text{
+    font-size: 20px;
+    color: black;
+    font-family: 'Albert Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 36px;
+    padding: 1%;
+    width: 100%;
+    text-decoration: none;
+    &:hover {
+      cursor: pointer;
+
+    }
+}
+
+.slide{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+
+}
+@media screen and (max-width: 480px){
+  .baseline-logo{
+    margin-left: 2px!important;
+  }
+}
+// .con-tooltip {
+//   position: relative;
+//   border-radius: 9px;
+//   padding: 0 20px;
+//   margin: 10px;
+//   display: inline-block;
+//   transition: all 0.3s ease-in-out;
+//   cursor: default;
+
+// }
+
+// /*tooltip */
+// .tooltip {
+//   visibility: hidden;
+//   z-index: 1;
+//   opacity: .40;
+
+//   width: 100%;
+//   padding: 0px 20px;
+
+//   background: #333;
+//   color: #E086D3;
+
+//   position: absolute;
+//   top:-140%;
+//   left: -25%;
+
+
+//   border-radius: 9px;
+//   font: 16px;
+
+//   transform: translateY(9px);
+//   transition: all 0.3s ease-in-out;
+
+//   box-shadow: 0 0 3px rgba(56, 54, 54, 0.86);
+// }
+
+// /* tooltip  after*/
+// .tooltip::after {
+//   content: " ";
+//   width: 0;
+//   height: 0;
+
+//   border-style: solid;
+//   border-width: 12px 12.5px 0 12.5px;
+//   border-color: #333 transparent transparent transparent;
+
+//   position: absolute;
+//   left: 40%;
+
+// }
+
+// .con-tooltip:hover .tooltip{
+//   visibility: visible;
+//   transform: translateY(-10px);
+//   opacity: 1;
+//     transition: .3s linear;
+//   animation: odsoky 1s ease-in-out infinite  alternate;
+
+// }
+// @keyframes odsoky {
+//   0%{
+//     transform: translateY(6px);
+//   }
+
+//   100%{
+//     transform: translateY(1px);
+//   }
+
+// }
+
+// /*hover ToolTip*/
+// .bottom:hover {transform: translateY(6px);}
+
+// /*bottom*/
+
+// .bottom .tooltip { top:115%; left:-20%; }
+
+// .bottom .tooltip::after{
+//   top:-17%;
+//   left:40%;
+//   transform: rotate(180deg);
+// }
+
+
