--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -158,8 +158,15 @@
     margin-left: 5%;
   }
 
+.card{
+      display: none;
+    }
+
 
   @media screen and (max-width: 730px) {
+    .card{
+      display: flex;
+    }
     .navbar-mobile{
       margin-left: 75%;
     }
