ajuste de responsividade

--- a/src/app/core/hiring/hiring.component.scss
+++ b/src/app/core/hiring/hiring.component.scss
@@ -80,7 +80,8 @@ height: 150px;
   top: 0px;
   left: 0px;
   position: relative;
-
+  background-size:cover;
+  background-position:center;
 }
 
   .center-text{
