--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <header  [ngClass]="isHome() ? 'baseline' : 'baseline-black'">
- <div class="container-header">
+ <div class="container-header default-container">
   <div class="baseline-content">
     <div class="baseline-logo">
       <a routerLink="/home" *ngIf="isHome(); else blacklogo" >
