--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,21 +1,21 @@
 <div class="black-box">
 <div class="content">
-  <span [routerLink]="['/home']">Inicio</span>
-  <span [routerLink]="['/about-us']" >Sobre nós</span>
-  <span [routerLink]="['/solutions']">Soluções</span>
-  <span [routerLink]="['/hiring']">Trabalhe Conosco</span>
-  <span [routerLink]="['/contact-us']" >Contato</span>
+  <span (click)="defaultService.backToTop()" [routerLink]="['/home']">Inicio</span>
+  <span (click)="defaultService.backToTop()" [routerLink]="['/about-us']" >Sobre nós</span>
+  <span (click)="defaultService.backToTop()" [routerLink]="['/solutions']">Soluções</span>
+  <span (click)="defaultService.backToTop()" [routerLink]="['/hiring']">Trabalhe Conosco</span>
+  <span (click)="defaultService.backToTop()" [routerLink]="['/contact-us']" >Contato</span>
 </div>
 <footer class="baseboard">
     <div class="default-container">
 
     <div class="baseboard-logo">
-      <img [routerLink]="['/home']" class="logo" src="../../assets/svg/LOGO 4.svg" alt="" />
+      <img [routerLink]="['/home']" (click)="defaultService.backToTop()" class="logo" src="../../assets/svg/LOGO 4.svg" alt="" />
     </div>
 
     <div class="baseboard-button">
       <div class="baseline-button">
-        <button type="button" class="btnHome" [routerLink]="['/contact-us']">Contato</button>
+        <button type="button" class="btnHome" (click)="defaultService.backToTop()" [routerLink]="['/contact-us']">Contato</button>
       </div>
     </div>
   </div>
