--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,15 @@
   border: 0;
   font-family:  'Albert Sans', sans-serif;
 }
+.default-container{
+  max-width: 1280px;
+  margin: 0 auto;
+}
+.display-center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 :root {
   /*principal colors*/
   --primary-color: #354739;
