responsividade em telas maiores

--- a/src/app/core/about-us/about-us.component.html
+++ b/src/app/core/about-us/about-us.component.html
@@ -1,5 +1,5 @@
 <div class="top-background"></div>
-<div class="container-background">
+<div class="container-background default-container">
   <div class="top-text">
   <h1 class="bold-tittle">
     Inicio / Sobre nós
@@ -12,7 +12,7 @@
   </div>
 
 
-<div class="wrapper">
+<div class="wrapper default-container">
 <div class="cards-wrap">
   <div class="card-item">
     <div class="card-inner">
