--- a/src/app/core/hiring/hiring.component.html
+++ b/src/app/core/hiring/hiring.component.html
@@ -15,35 +15,37 @@
       <button class="contact-button">Vagas disponíveis</button>
     </div>
   </div>
+<div class="default-container">
 
-  <div class="center-text">
-  <h2 class="hiring-tittle">Por que trabalhar conosco?</h2>
-  <h3 class="hiring-g-text">Temos potencial de crescimento</h3>
-  <h3 class="hiring-text">Acreditamos que somos uma empresa com grande potencial de crescimento no mercado, oferecendo desenvolvedores, equipes e soluções para as necessidades de cada cliente.</h3>
-  </div>
-
-  <div class="center-text">
-    <h3 class="hiring-g-text">Feita de Pessoas</h3>
-    <h3 class="hiring-text">Se todos estiverem bem, com equilíbrio entre a vida pessoal e profissional, criamos uma relação de proximidade em que todos saem ganhando.</h3>
+    <div class="center-text">
+    <h2 class="hiring-tittle">Por que trabalhar conosco?</h2>
+    <h3 class="hiring-g-text">Temos potencial de crescimento</h3>
+    <h3 class="hiring-text">Acreditamos que somos uma empresa com grande potencial de crescimento no mercado, oferecendo desenvolvedores, equipes e soluções para as necessidades de cada cliente.</h3>
     </div>
 
     <div class="center-text">
-
-      <h3 class="hiring-g-text">Apaixonados pelo que fazemos</h3>
-      <h3 class="hiring-text">Aqui temos pessoas apaixonadas pelo que fazem, acreditando no potencial de cada um da nossa equipe.</h3>
+      <h3 class="hiring-g-text">Feita de Pessoas</h3>
+      <h3 class="hiring-text">Se todos estiverem bem, com equilíbrio entre a vida pessoal e profissional, criamos uma relação de proximidade em que todos saem ganhando.</h3>
       </div>
 
       <div class="center-text">
-        <h2 class="hiring-tittle">Central de Treinamento</h2>
-        <h3 class="hiring-g-text">Treinamentos, Cursos e Palestras</h3>
-        <h3 class="hiring-text">A empresa possui local amplo para a realização dos treinamentos e realizados por meio de profissionais qualificados e credenciados com recursos audiovisuais e apostilas.</h3>
+
+        <h3 class="hiring-g-text">Apaixonados pelo que fazemos</h3>
+        <h3 class="hiring-text">Aqui temos pessoas apaixonadas pelo que fazem, acreditando no potencial de cada um da nossa equipe.</h3>
         </div>
-      <div class="center-text">
-        <h2 class="hiring-tittle">Sustentabilidade</h2>
-        <h3 class="hiring-g-text">Algumas iniciativas:</h3>
-        <h3 class="hiring-text">Redução de 80% no uso de copos descartáveis, uma vez que todos os colaboradores utilizam o seu próprio copo para tomar água e café.
 
-          Projetos sociais locais e nacionais, com apoio à ONGs, doações de alimentos, ajuda de custo, disponibilização de sistema 100% gratuito e ações em datas comemorativas, com diversas formas de doações.</h3>
-      </div>
+        <div class="center-text">
+          <h2 class="hiring-tittle">Central de Treinamento</h2>
+          <h3 class="hiring-g-text">Treinamentos, Cursos e Palestras</h3>
+          <h3 class="hiring-text">A empresa possui local amplo para a realização dos treinamentos e realizados por meio de profissionais qualificados e credenciados com recursos audiovisuais e apostilas.</h3>
+          </div>
+        <div class="center-text">
+          <h2 class="hiring-tittle">Sustentabilidade</h2>
+          <h3 class="hiring-g-text">Algumas iniciativas:</h3>
+          <h3 class="hiring-text">Redução de 80% no uso de copos descartáveis, uma vez que todos os colaboradores utilizam o seu próprio copo para tomar água e café.
 
+            Projetos sociais locais e nacionais, com apoio à ONGs, doações de alimentos, ajuda de custo, disponibilização de sistema 100% gratuito e ações em datas comemorativas, com diversas formas de doações.</h3>
+        </div>
+      <div class="fundo-branco"></div>
+</div>
 </div>
