--- a/src/app/core/solutions/solutions.component.scss
+++ b/src/app/core/solutions/solutions.component.scss
@@ -20,3 +20,74 @@
   font-size: 15px;
   line-height: 22px;
 }
+
+.background-solutions {
+  background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container-solutions {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 10%;
+  gap: 10px;
+  width: 100%;
+  height: 514px;
+  margin: 0 !important;
+}
+.solutions-box {
+  font-family: "Albert Sans", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding:2%;
+  gap: 18px;
+  width: 450px;
+  height: 490px;
+}
+.solutions-img {
+  width: 418.61px;
+}
+.solutions-subtittle {
+  color: var(--first-black);
+  margin: 5px;
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 120%;
+}
+.solutions-tittle {
+  color: #587b52;
+  margin: 5px;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 120%;
+}
+
+.solutions-text {
+  color: #545454;
+  margin: 5px;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 20.4px;
+}
+.solutions-button {
+  width: 256px;
+  height: 58px;
+  padding-right: 15px;
+  margin-left: 30%;
+  margin-top: 5%;
+  &:hover {
+    cursor: pointer;
+    }
+  &:active:focus {
+    box-shadow: none;
+  }
+}
+.green-line{
+  background-color: #587b52;
+  width: 80%;
+  height: 42px;
+}
