--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Albert+Sans&family=Syne&display=swap');
 
-.fundo-branco{
-  width: 100%;
-  height: 200px;
+:root {
+  /*principal colors*/
+  --primary-color: #354739;
+  --secondary-color: #ffffff;
+  /*buttons colors*/
+  --black: #000000;
+  --white: #ffffff;
+  --gray: #f5f5f5;
+  --green: #587b52;
+  /*fonts*/
 }
 
 * {
@@ -20,35 +27,36 @@
   align-items: center;
   justify-content: center;
 }
-:root {
-  /*principal colors*/
-  --primary-color: #354739;
-  --secondary-color: #ffffff;
-  /*buttons colors*/
-  --black: #000000;
-  --white: #ffffff;
-  --gray: #f5f5f5;
-  --green: #587b52;
-  /*fonts*/
+.default-b-tittle {
+  color: black;
+  margin: 5px;
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 120%;
+}
+.default-g-tittle {
+  color: #587b52;
+  margin: 5px;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 120%;
+}
+.bold-tittle{
+  margin-left: 10%;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 22px;
 }
 
-.button-template {
-  border: 2px solid transparent;
-  color: white;
-  background-color: #587b52;
-  font-family: "Albert Sans", sans-serif;
-  border-radius: 12px;
-  transition: 1s;
-  &:hover {
-    cursor: pointer;
-    border: 1px solid #587b52;
-    background: white;
-    color: #587b52;
-  }
-  &:active:focus {
-    box-shadow: none;
-  }
+.default-text {
+  color: #545454;
+  margin: 5px;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 20.4px;
 }
+
 
 /* Importing Bootstrap SCSS file. */
 @import "~bootstrap/scss/bootstrap";
@@ -97,30 +105,8 @@ html {
   -o-animation: fadeIn 2s ease-in-out;
   animation: fadeIn 2s ease-in-out;
 }
-.baseline-button .btn-outline-primary,
-.btnHome {
-  padding: 1%;
-  width: 132px;
-  height: 35px;
-  border: 2px;
-  color: var(--first-white);
-  background-color: #587b52;
-  font-family:  'Albert Sans', sans-serif;;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  border-radius: 12px;
-  transition: 1s;
-  &:hover {
-    cursor: pointer;
-    background: white;
-    color: #587b52;
-    border: 2px solid #587b52;
-  }
-  &:active:focus {
-    box-shadow: none;
-  }
-}
+
+
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
