feat(AMG-004): criação do footer, e ajustes no header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-header></app-header>
+<app-header [menu]="menu"></app-header>
 <router-outlet></router-outlet>
+<app-footer [menu]="menu"></app-footer>
