--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,29 @@
-<p>footer works!</p>
+<footer class="menu">
+
+    <div class="menu--top bg-dark py-2">
+      <nav class="default-container d-flex justify-content-between">
+        <div class="hover-underline-animation py-1" *ngFor="let item of menu"
+        routerLink="{{item.route}}">
+          {{item.name}}
+        </div>
+      </nav>
+    </div>
+
+    <div class="py-3 menu--center">
+      <div class="default-container d-flex justify-content-between align-items-center">
+        <img src="../../../../assets/svg/LOGO 4.svg" alt="amg" routerLink="/home">
+        <app-default-button
+        class="btn--contact"
+        routerLink="/contato"
+        [arrow]="false"
+        [label]="'Contato'"
+        [classes]="'py-1 px-4'"
+      >
+      </app-default-button>
+      </div>
+    </div>
+
+  <div class="menu--bottom bg-dark">
+    <span class="text-white d-flex justify-content-center py-1 text-center">Todos os direitos reservados ANGULAR MONEY GROUP &copy; {{year}}.</span>
+  </div>
+</footer>
