--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Albert+Sans&family=Syne&display=swap');
 
+html{
+  min-width: 320px;
+}
+
 :root {
   /*principal colors*/
   --primary-color: #354739;
@@ -18,10 +22,7 @@
   border: 0;
   font-family:  'Albert Sans', sans-serif;
 }
-.default-container{
-  max-width: 1280px;
-  margin: 0 auto;
-}
+
 .display-center{
   display: flex;
   align-items: center;
@@ -58,6 +59,7 @@
 }
 
 .default-container{
+  max-width: 1280px;
   width: 75%;
   margin: 0 auto;
 }
