--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -24,6 +24,6 @@
     </div>
 
   <div class="menu--bottom bg-dark">
-    <span class="text-white d-flex justify-content-center py-1 text-center">Todos os direitos reservados ANGULAR MONEY GROUP &copy; {{year}}.</span>
+    <span class="text-white d-flex justify-content-center py-1 text-center default-container">Todos os direitos reservados ANGULAR MONEY GROUP &copy; {{year}}.</span>
   </div>
 </footer>
