--- a/src/app/pages/contact/components/contact-page/contact-page.component.html
+++ b/src/app/pages/contact/components/contact-page/contact-page.component.html
@@ -1,1 +1,14 @@
-<p>contact-page works!</p>
+<div>
+  <div class="default-container mx-auto py-5 d-flex content">
+    <div class="w-50 content--form">
+      <h3 class="default-g-tittle">Contato</h3>
+      <app-contact-form></app-contact-form>
+    </div>
+    <div class="d-flex justify-content-end w-50 content--image">
+      <img src="../../../../../assets/backgrounds/contact-background.png" alt="">
+    </div>
+  </div>
+  <div class=" banner py-4">
+     <p class="text-center text-white default-container">Seus projetos com produtividade, agilidade e redução de custos.</p>
+  </div>
+</div>
