--- a/src/app/shared/components/contact-form/contact-form.component.html
+++ b/src/app/shared/components/contact-form/contact-form.component.html
@@ -1,1 +1,37 @@
-<p>contact-form works!</p>
+<form class="w-100" [formGroup]="contactForm">
+
+  <div>
+    <input type="email" class="rounded w-100" placeholder="email@seudominio.com.br" formControlName="email">
+    <div class="validation--box d-flex align-items-center ">
+      <span class="text-danger" *ngIf="email.invalid && submitted">*E-mail inválido</span>
+    </div>
+  </div>
+
+  <div>
+    <input type="tel" class="rounded w-100" placeholder="(00) 00000-0000" mask="(00) 00000-0000" formControlName="phoneNumber">
+    <div class="validation--box d-flex align-items-center ">
+      <span class="text-danger" *ngIf="phoneNumber.invalid && submitted">*Número inválido</span>
+    </div>
+  </div>
+
+  <div>
+    <textarea name="" id="" cols="20" rows="10" maxlength="300" class="rounded w-100" placeholder="Descreva aqui sua mensagem..." formControlName="message"></textarea>
+  </div>
+
+  <div class="d-flex justify-content-end pt-3 btn--submit">
+    <app-default-button
+      (click)="sendForm(contactForm)"
+      [arrow]="true"
+      [label]="'Entrar em contato'"
+      [loading]="loadingSubmit"
+    ></app-default-button>
+  </div>
+
+</form>
+
+<app-message-status
+[showMessage]="showMessage"
+[text]="'Mensagem enviada com sucesso!'"
+[title]="'Enviado'"
+[type]="'success'"
+(modalClosed)="showMessage = false"></app-message-status>
