--- a/src/app/shared/components/default-button/default-button.component.scss
+++ b/src/app/shared/components/default-button/default-button.component.scss
@@ -14,6 +14,11 @@ button{
       border-width: 0 3px 3px 0;
       transition: 1000ms;
     }
+    .reload{
+      border: 3px solid white;
+      border-top: 3px solid var(--green);
+      transition: 1000ms;
+    }
   }
   &:not(:hover){
     transition: 1000ms;
@@ -34,4 +39,36 @@ button{
 .right {
   transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
+}
+
+.reload{
+  border: 3px solid var(--green);
+  border-radius: 50%;
+  border-top: 3px solid white;
+  width: 15px;
+  height: 15px;
+  -webkit-animation: spin 1.3s linear infinite;
+  /* Safari */
+  animation: spin 1.2s linear infinite;
+}
+
+ /* Safari */
+ @-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
