feat(AMG-002): alterações na página de contato

--- a/src/app/pages/contact/components/contact-page/contact-page.component.html
+++ b/src/app/pages/contact/components/contact-page/contact-page.component.html
@@ -1,6 +1,6 @@
-<div>
+<div class="pt-3">
   <div class="default-container mx-auto py-5 d-flex content">
-    <div class="w-50 content--form">
+    <div class="w-50 content--form py-3">
       <h3 class="default-g-tittle">Contato</h3>
       <app-contact-form></app-contact-form>
     </div>
@@ -9,6 +9,6 @@
     </div>
   </div>
   <div class=" banner py-4">
-     <p class="text-center text-white default-container">Seus projetos com produtividade, agilidade e redução de custos.</p>
+     <p class="text-center text-white">Seus projetos com produtividade, agilidade e redução de custos.</p>
   </div>
 </div>
