--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -83,7 +83,7 @@
 
   </div>
 
-  <div class="w-100 menu--mobile py-2 z-nav" *ngIf="toggle">
+  <div class="w-100 menu--mobile py-2 mt-2 z-nav" *ngIf="toggle">
     <div *ngFor="let item of menu" class="d-flex justify-content-center menu--mobile__settings">
       <div
       class="text-decoration-none py-2"
