feat(AMG-004): criação da página de trabalhe conosco e componentização do formulário de currículo

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,13 @@ html{
   font-size: 17px;
   line-height: 120%;
 }
+
+.default-subtitle.tittle{
+  color: #3A5237 !important;
+  font-weight: 600 !important;
+  font-size: 21px !important;
+}
+
 .bold-tittle{
   margin-left: 10%;
   font-style: normal;
