--- a/src/app/pages/hiring/components/hiring-page/hiring-page.component.html
+++ b/src/app/pages/hiring/components/hiring-page/hiring-page.component.html
@@ -1,1 +1,40 @@
-<p>hiring-page works!</p>
+<div>
+  <div>
+    <!--BANNER COM TEXTOS-->
+  </div>
+
+
+  <div class="default-container">
+    <div>
+      <div  *ngFor="let item of contentTexts">
+        <h3 class="default-g-tittle text-center pb-3">{{item.title}}</h3>
+        <div class="pb-4" *ngFor="let subtitle of item.subtitle">
+          <h2 class="default-subtitle.tittle text-center">{{subtitle.title}}</h2>
+          <p class="default-text text-center pb-4">{{subtitle.text}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="default-container d-flex py-5">
+
+    <div class="w-50 curriculum--form">
+      <div class="default-container">
+        <div class="w-100 p-3">
+          <h4 class="text-center">Envie seu currículo</h4>
+        </div>
+        <div>
+          <h5>Mande suas dúvidas, portfólios e ideias.</h5>
+        </div>
+        <div>
+          <app-curriculum-form></app-curriculum-form>
+        </div>
+      </div>
+    </div>
+
+    <div class="w-50">
+      <img src="../../../../../assets/backgrounds/hiring-image.jpg" width="100%" alt="">
+    </div>
+  </div>
+
+</div>
