feat(AMG-005): implementa sobre nos

--- a/src/app/pages/about/components/about-page/about-page.component.html
+++ b/src/app/pages/about/components/about-page/about-page.component.html
@@ -1,6 +1,67 @@
-<p>about-page works!</p>
-<app-default-button
-[label]="'contato'"
-[arrow]="true"
-[classes]="'py-2 px-4'"
-></app-default-button>
+<div class="pag">
+  <div class="pag__center">
+    <p class="text__bold">inicio / sobre nós</p>
+    <div class="d-flex text-center flex-column">
+      <p class="text__green mt-3 mb-3">Sobre nós</p>
+      <p class="text__opc-title">
+        Fundada em 2019, a Angular Money Group é uma empresa voltada á
+        desenvolvimento de website e aplicativos. Tendo como seu principal carro
+        chefe o front end no framework angular.
+      </p>
+      <p class="text__subtitle">
+        Atualmente, somos uma equipe com mais de 20 desenvolvedores, com sede em
+        Uberlândia, atendemos clientes em todo o país, e também internacionais.
+      </p>
+    </div>
+
+    <div class="d-flex mt-5">
+      <div class="box__attr">
+        <img
+          src="../../../../../assets/gifs/completo.gif"
+          alt=""
+          width="70px"
+        />
+        <div class="mx-1 my-1 text__bold">Missão</div>
+        <p class="mx-1 text__desc">
+          Criar, desenvolver e inovar produtos e serviços no âmbito empresarial
+          utilizando a tecnologia da informação, para disponibilizar ao mercado
+          soluções que aumentem a competitividade e a rentabilidade das
+          organizações.
+        </p>
+      </div>
+
+      <div class="box__attr">
+        <img src="../../../../../assets/gifs/alvo.gif" alt="" width="70px" />
+        <div class="mx-1 my-1 text__bold">Visão</div>
+        <p class="mx-1 text__desc">
+          Ser uma empresa sólida, lucrativa e inovadora, que proporcione
+          qualidade de vida aos colaboradores e promova a transformação da
+          sociedade a partir das novas tecnologias, e a cada ano agregar mais
+          valor aos nossos clientes.
+        </p>
+      </div>
+
+      <div class="box__attr">
+        <img
+          src="../../../../../assets/gifs/lista-de-controle.gif"
+          alt=""
+          width="70px"
+        />
+        <div class="mx-1 my-1 text__bold">Valores</div>
+        <p class="mx-1 text__desc">
+          Honestidade, Espirito de Equipe, Confiança e Credibilidade, Ética,
+          Comprometimento, Inovação
+        </p>
+      </div>
+
+      <div class="box__attr">
+        <img src="../../../../../assets/gifs/foguete.gif" alt="" width="70px" />
+        <div class="mx-1 my-1 text__bold">Propósito</div>
+        <p class="mx-1 text__desc">
+          Nosso propósito, e fazer com que nossas tecnologias tragam resultados
+          para toda sociedade.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
