feat(AMG-004): ajustando responsividade da home page

--- a/src/app/pages/home/components/home-page/home-page.component.html
+++ b/src/app/pages/home/components/home-page/home-page.component.html
@@ -16,8 +16,8 @@
     </div>
   </div>
 
-  <div class="aling__center">
-    <div class="pag__center d-flex">
+  <div class="aling__center section--first">
+    <div class="pag__center d-flex section--first--content">
       <div class="d-flex justify-content-center flex-column w-75">
         <p class="text__green">Quem somos</p>
         <p class="text__default">
@@ -29,12 +29,12 @@
           com sede em Uberlândia, atendemos clientes em todo o país.
         </p>
       </div>
-      <img src="assets/backgrounds/bg-mid.png" alt="" width="40%" />
+      <img src="assets/backgrounds/bg-mid.png" alt="" width="50%" />
     </div>
   </div>
 
-  <div class="aling__call">
-    <div class="pag__center">
+  <div class="aling__call section--second">
+    <div class="pag__center section--second--content">
       <p class="text__green">Trabalhe conosco</p>
 
       <div class="d-flex">
@@ -68,8 +68,8 @@
     </div>
   </div>
 
-  <div class="aling__bot">
-    <div class="pag__center">
+  <div class="aling__bot section--third">
+    <div class="pag__center section--third--content">
       <p class="text__green">Sustentabilidade</p>
       <p class="text__default">Algumas iniciativas:</p>
       <div class="d-flex">
