--- a/src/app/pages/contact/components/contact-page/contact-page.component.html
+++ b/src/app/pages/contact/components/contact-page/contact-page.component.html
@@ -1,7 +1,7 @@
 <div class="pt-3">
   <div class="default-container mx-auto py-5 d-flex content">
     <div class="w-50 content--form py-3">
-      <h3 class="default-g-tittle">Contato</h3>
+      <h3 class="text__green">Contato</h3>
       <app-contact-form></app-contact-form>
     </div>
     <div class="d-flex justify-content-end w-50 content--image">
