feat(AMG-004): ajustando responsividade da pagina trabalhe conosco, e ajustes no header

--- a/src/app/pages/hiring/components/hiring-page/hiring-page.component.html
+++ b/src/app/pages/hiring/components/hiring-page/hiring-page.component.html
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <div class="w-50">
+    <div class="w-50 d-flex align-items-center curriculum--img">
       <img src="../../../../../assets/backgrounds/hiring-image.jpg" width="100%" alt="">
     </div>
   </div>
