--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="menu">
         <nav class="menu--nav d-flex">
-          <span class="px-3" *ngFor="let item of menu">
+          <span class="px-3 d-flex align-items-center" *ngFor="let item of menu">
             <a
               *ngIf="item.name !== 'Contato' && item.name !== 'Início'"
               class="text-decoration-none py-2 px-1"
