--- a/src/app/shared/components/curriculum-form/curriculum-form.component.html
+++ b/src/app/shared/components/curriculum-form/curriculum-form.component.html
@@ -31,7 +31,7 @@
   </div>
 
 
-  <div class="d-flex justify-content-center pt-3 btn--submit">
+  <div class="d-flex justify-content-center py-3 btn--submit">
     <app-default-button
       (click)="sendForm(curriculumForm)"
       [arrow]="false"
