--- a/src/app/pages/solutions/components/solutions-page/solutions-page.component.html
+++ b/src/app/pages/solutions/components/solutions-page/solutions-page.component.html
@@ -1,1 +1,99 @@
-<p>solutions-page works!</p>
+<div class="pag">
+  <div class="pag__center d-flex">
+    <img
+      src="assets/backgrounds/bg-solution.png"
+      alt="bg-solutions"
+      width="50%"
+    />
+    <div class="w-50 aling__solutions">
+      <p class="text__green-title mx-4">
+        Precisando de <br />
+        desenvolvedores, ou de <br />
+        squads para seu produto?
+      </p>
+      <p class="text__green-subtitle mt-5 mx-4">
+        Montamos um time de acordo com sua <br />
+        necessidade, seguindo a melhor forma <br />
+        ágil de trabalhar.
+      </p>
+      <app-default-button
+        class="btn--contact"
+        routerLink="/contato"
+        [arrow]="false"
+        [label]="'Fale com um especialista'"
+        [classes]="'py-3 px-3 h3 button__solution mx-4'"
+      >
+      </app-default-button>
+    </div>
+  </div>
+
+  <div class="pag__center">
+    <div class="w-100" style="background-color: #587b52; height: 52px"></div>
+  </div>
+
+  <div class="pag__center d-flex">
+    <div class="w-50 aling__solutions">
+      <img
+        src="assets/backgrounds/bg-solu-mid.svg"
+        alt="bg-solu-mid"
+        width="100%"
+      />
+    </div>
+    <div class="w-50">
+      <p class="text__green-title mt-3 mx-4">
+        Por que escolher uma <br />
+        squad ágil para seu <br />
+        projeto?
+      </p>
+      <p class="mt-1 mx-4 w-75 text__solution">
+        Seguir um modelo de trabalho mais utilizado hoje em desenvolvimento de
+        software na área de tecnologia, é a metodologia agil, seguindo o fluxo
+        de serviço conforme a imagem. Na AMG, você define a sua equipe, conforme
+        sua necessidade, temos especialistas para analisar todas as suas
+        demandas e ajudar a definir quais e quantos profissionais forem
+        precisos.
+      </p>
+    </div>
+  </div>
+
+  <div class="pag__center" style="background-color: #587b52">
+    <div
+      class="aling__box d-flex justify-content-center align-items-center flex-column"
+    >
+      <p class="text__title">
+        Seus projetos com produtividade, agilidade e redução de custos.
+      </p>
+      <app-default-button
+        class="btn--contact"
+        routerLink="/contato"
+        [arrow]="false"
+        [label]="'Fale com um especialista'"
+        [classes]="'py-3 px-3 h3 button__solution button-white'"
+      >
+      </app-default-button>
+    </div>
+  </div>
+
+  <div class="pag__center d-flex">
+    <div class="aling__bot">
+      <p class="text__green-title">Por quê contratar pela AMG?</p>
+      <p class="text__solution">
+        Somos profissionais especialista em sistema Agil na área de tecnologia.
+        Assim, você acelera o seu negócios de forma rápida, flexível e
+        confiável.
+      </p>
+      <ul>
+        <li class="text__solution">
+          Temos profissionais o tempo todo supervisionando uns aos outros, para
+          solucionar qualquer dificuldade.
+        </li>
+        <li class="text__solution">Serviço terceirizado sem vínculo empregatício.</li>
+        <li class="text__solution">Maior agilidade com o minimo de burocracia.</li>
+        <li class="text__solution">Formamos equipes de acordo com sua necessidade.</li>
+        <li class="text__solution">Custo fixo.</li>
+      </ul>
+    </div>
+      <img src="../../../../../assets/backgrounds/bg-solu-bot.svg" alt="bg-solu-bot"
+      width="70%">
+  </div>
+</div>
