--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,12 @@ html{
   font-family:  'Albert Sans', sans-serif;
 }
 
+.button{
+  &__solution{
+    border-radius: 56px !important;
+  }
+}
+
 .text{
   &__title{
     font-weight: 600;
@@ -39,13 +45,6 @@ html{
     font-size: 24px;
     color: #FFFFFF;
   }
-
-.default-subtitle.tittle{
-  color: #3A5237 !important;
-  font-weight: 600 !important;
-  font-size: 21px !important;
-}
-
   &__default{
     font-weight: 400;
     font-size: 26px;
@@ -76,7 +75,29 @@ html{
     font-size: 24px;
     color: #587B52;
   }
+  &__green-title{
+    font-weight: 600;
+    font-size: 42px;
+    color: #587B52;
+  }
+  &__green-subtitle{
+    font-weight: 400;
+    font-size: 24px;
+    color: #587B52;
+  }
+  &__solution{
+    font-weight: 400;
+    font-size: 20px;
+    color: #262626;
+  }
 }
+
+.default-subtitle.tittle{
+  color: #3A5237 !important;
+  font-weight: 600 !important;
+  font-size: 21px !important;
+}
+
 .pag{
   width: 100vw;
   height: auto;
